Added 16th august 5.11 PM

--- a/app/src/main/res/layout/activity_first.xml
+++ b/app/src/main/res/layout/activity_first.xml
@@ -43,7 +43,8 @@
                 android:id="@+id/pager"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:overScrollMode="never"/>
+                android:layout_marginBottom="15dp"
+                android:overScrollMode="never" />
 
             <com.viewpagerindicator.CirclePageIndicator
                 android:id="@+id/indicator"
