--- a/app/src/main/res/layout/fragment_first_viewpager.xml
+++ b/app/src/main/res/layout/fragment_first_viewpager.xml
@@ -6,7 +6,19 @@
 
     <ImageView
         android:id="@+id/image_fragment_first_viewpager"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
         android:src="@drawable/dummy_1"/>
+
+    <TextView
+        android:id="@+id/text_fragment_first_viewpager"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:textAlignment="center"
+        android:textColor="@color/colorBlueLight"
+        android:text="@string/first_act_string_1"
+        android:textSize="20sp"/>
 </LinearLayout>
