--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,7 +11,7 @@
     <color name="colorGrayLight">#e6e6e6</color>
     <color name="colorGrayAbout">#808083</color>
     <color name="colorRedLight">#e95252</color>
-
+    <color name="SelectDay">#056107</color>
     <color name="colorTabs">#dbdbdb</color>
     <color name="colorTabsLabel">#828282</color>
 
