--- a/app/src/main/res/layout/fragment_5days_forecast.xml
+++ b/app/src/main/res/layout/fragment_5days_forecast.xml
@@ -14,6 +14,7 @@
             android:id="@+id/layoutday1"
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:background="#056107"
             android:layout_weight="2"
             android:orientation="vertical"
             android:padding="7dp"
@@ -32,7 +33,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="7"
-                android:background="@drawable/test2"
+                android:src="@drawable/test2"
                 android:id="@+id/weatherIconFragment1"
                 android:scaleType="fitXY"
                 android:layout_gravity="center"/>
@@ -80,7 +81,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="7"
-                android:background="@drawable/test2"
+                android:src="@drawable/test2"
                 android:id="@+id/weatherIconFragment2"
                 android:scaleType="fitXY"
                 android:layout_gravity="center"/>
@@ -128,7 +129,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="7"
-                android:background="@drawable/test2"
+                android:src="@drawable/test2"
                 android:id="@+id/weatherIconFragment3"
                 android:scaleType="fitXY"
                 android:layout_gravity="center"/>
@@ -176,7 +177,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="7"
-                android:background="@drawable/test2"
+                android:src="@drawable/test2"
                 android:id="@+id/weatherIconFragment4"
                 android:scaleType="fitXY"
                 android:layout_gravity="center"/>
@@ -224,7 +225,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="7"
-                android:background="@drawable/test2"
+                android:src="@drawable/test2"
                 android:id="@+id/weatherIconFragment5"
                 android:scaleType="fitXY"
                 android:layout_gravity="center"/>
